- initTables method exposed as public (needed for cases when table is dynamically added or removed)
- from now lib uses querySelectorAll for tables and div selection (here is compatibility table http://caniuse.com/queryselector)
- enableDrag uses CSS selector 
- added clone.sendBack option - if set to true, cloned DIV element could be returned to the source
- updated documentation

4.7.6
- added event handler myhandler_relocated() - event can be triggered after single call of relocate() method or after all DIV elements are shifted in "shift" mode

4.7.5
- added "cloned" as optional input parameter to the myhandler_moved() event handler

4.7.4
- added myhandler_final() event handler
- the color gets ignored in case a row is moved - bug fixed thanks to Rüdiger Kaatz
- added example24
- redips-drag.js renamed to redips-drag-source.js
- shift_after is converted to string parameter with options ("always", "delete" and "default")

4.7.3
- fixed myhandler_dropped_before() in case of "overwrite" drag mode (bottom DIV element was deleted before calling myhandler_dropped_before event handler)  

4.7.2
- added optional parameters target_row, source_table and source_row_index to the myhandler_row_dropped event handler

4.7.1
- fixed bug with undefined target_cell in myhandler_switched() - thanks to Doc

4.7.0
- added support for rowspan/colspan cells in "shift" mode

4.6.23
- fixed bug in case of canceling drop in "switch" mode - thanks to Robin

4.6.22
- added line tables.length = 0; inside init_tables() to empty array "tables" (it's needed in case of multiple drag container with different number of tables)

4.6.21
- when last row is moved from table with move_object() method, it will be marked as "empty_row"
- if row index for target table in move_object() method is greater then number of rows in target table then moved row will be appended to the table end
- upgraded example 18 - Simple element animation (row)

4.6.20