@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no"/><!-- "position: fixed" fix for Android 2.2+ -->
 		<link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
 		<script type="text/javascript">
-			var redips_url = '/javascript/drag-and-drop-example-3/';
+			var redipsURL = '/javascript/drag-and-drop-example-3/';
 		</script>
 		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
