@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="style-screen.css" type="text/css" media="screen"/>
 		<link rel="stylesheet" href="style-print.css" type="text/css" media="print"/>
 		<script type="text/javascript">
-			var redips_url = '/javascript/drag-and-drop-table-row/';
+			var redipsURL = '/javascript/drag-and-drop-table-row/';
 		</script>
 		<script type="text/javascript" src="../header.js"></script>
 		<script type="text/javascript" src="../redips-drag-min.js"></script>
