@@ -70,7 +70,7 @@
 				<tr>
 					<td><div id="link1" class="drag t1">Example 03<br/><a href="example03/index.php">School timetable</a> (<a href="example03/index_static.html">static</a>)</div></td>
 					<td><div id="link1" class="drag t1">Example 12<br/><a href="example12/">Select and move more elements</a></div></td>
-					<td><div id="link1" class="drag t1">Example 21<br/><a href="example21/">Shift table content</a></div></td>
+					<td><div id="link1" class="drag t1">Example 21<br/><a href="example21/">Shift table content</a> / <a href="example21/simple/index.html">simple</a></div></td>
 				</tr>
 				<tr>
 					<td><div id="link1" class="drag t1">Example 04<br/><a href="example04/">Tic Tac Toe</a></div></td>
